<resources>
    <string name="app_name">Bungaku Pro</string>
    <string name="welcome">Welcome in Bungaku!</string>
    <string name="desc_menu">Explore the world of flowers with Bungaku! Recognize, learn about origins, and discover unique stories behind each bloom for a fun floral learning experience.</string>
    <string name="welcome_attention">Let\'s start your educational journey!</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username_validation_empty">Enter a username!</string>
    <string name="email_validation_empty">Enter a email address!</string>
    <string name="email_validation">Invalid email</string>
    <string name="password_valid_empty">Enter your password</string>
    <string name="password_length">This section cannot be less than 8 characters</string>
    <string name="picture_rosses">Picture Rosses</string>
    <string name="picture_edelweiss">Picture Edelweiss</string>
    <string name="dontAccount">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="logo_desc">logo Bungaku</string>
    <string name="tv_haveAccount">Have an account?</string>
    <string name="tv_joinSign">Join Bungaku!</string>
    <string name="tv_signUp">Register to Discover the Beauty of Flowers:</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="title_logo">Bungaku</string>
    <string name="logo_motto">Where Knowledge Flourishes Amidst Petals</string>
    <string name="search_flower">Search Flower</string>
    <string name="scientific_name">Scientific name :</string>
    <string name="tempat_asal">Tempat Asal :</string>
    <string name="tempat_berbunga">Tempat berbunga :</string>
    <string name="musim_berbunga">Musim berbunga :</string>
    <string name="icon_description">icon description</string>
    <string name="image_flower">image flower</string>
    <string name="description">Description</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="profile_title">Bungaku Profile</string>
    <string name="image_profile">image profile</string>
    <string name="setting">Setting</string>
    <string name="change_name">Change Name</string>
    <string name="icon_change_name">icon change name</string>
    <string name="logout">Logout</string>
    <string name="result_here">Result Here</string>
    <string name="output">Output :</string>
    <string name="load_image">Load Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="title_result">Prediction Flower</string>
    <string name="switch_camera_button">Switch Camera Button</string>
    <string name="capture_button">Capture Button</string>
    <string name="back_button">Back Button</string>
    <string name="flower_image">flower image</string>
    <string name="percentage">Percentage :</string>
    <string name="information_result">Click on the result text to learn more</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="configuration">Configuration</string>
    <string name="change_username">Change Username</string>
    <string name="add_newUsername">Add new username here</string>
    <string name="update">Update</string>
    <string name="add_new_email_here">Add new email here</string>
    <string name="new_password">Add new password here</string>
    <string name="current_password">Add current password here</string>
</resources>